2009-05-12  Mark Probst  <mark.probst@gmail.com>

	* monitor.c, monitor.h (mono_monitor_get_object_monitor_weak_link):
	New function for returning a monitor's weak link if it has one.

	* sgen-gc.c: Remove an object's monitor's weak link (if it has
	one) when clearing a domain.  These can still be around because
	the object might not have been collected.

2009-05-12  Zoltan Varga  <vargaz@gmail.com>

	* gc.c: Fix a warning.

2009-05-12  Kornél Pál  <kornelpal@gmail.com>

	* gc.c (mono_gc_init): Set gc_thread on creation. This avoids the
	prevous wait that resulted in a deadlock on Windows when initializing
	the runtime form DllMain. Also results in improved startup time.
	(finalizer_thread): Get rid of thread_started_event.
	* threads.c, threads-types.h (mono_thread_create_internal): Return the
	resulting MonoThread.

	Contributed under MIT/X11 license.

2009-05-11 Rodrigo Kumpera  <rkumpera@novell.com>

	* metadata-verify.c: Verify the implmap table.
	Don't require that #US and #Strings be present.

2009-05-11  Sebastien Pouliot  <sebastien@ximian.com>

	* security-core-clr.c: Delegate checks are done at creation time,
	not a invocation time. Fix exception for Telerik Silverlight demo

2009-05-11  Mark Probst  <mark.probst@gmail.com>

	* sgen-gc.c (need_remove_object_for_domain): Remove the special
	case for the Thread class.

	* threads.c: Do clean-up of abort exception/state in
	thread_cleanup() instead of Thread.free_internal().  Also clean up
	current_appcontext.  The reason we have to do that is because
	those references might point into another domain and if that
	domain is unloaded before the thread is finalized, they point to
	invalid data.

2009-05-10  Andreas Faerber  <andreas.faerber@web.de>

	* null-gc.c (mono_gc_weak_link_add, mono_gc_clear_domain): Fix
	stub signatures.
	
	Contributed unter MIT/X11 license.

2009-05-09  Miguel de Icaza  <miguel@novell.com>

	* verify.c, metadata-verifier.c: Add support for disabling the
	verifier in some builds.
